# PCN-self-improvement-research

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: 00_overview.md  01_architecture.md  02_build_data_training.md  03_testing_and_interaction.md  04_autonomous_search_loop.md  05_paper_outline.md  06_open_problems_and_approaches.md  07_cuda_kernel_build.md  08_bio_regime_experiments.md  09_kernel_pc_dynamics_deepdive.md  10_pc_vs_bp_deepdive.md  11_quellen.md  12_projektanalyse_und_befunde.md  13_umsetzungsplan.md  14_m4_methodik_review.md  15_kernel_novelty.md
pcn/: __init__.py  api.py  baselines.py  benchmark.py  evaluate.py  generate.py  generative.py  learning.py  model.py  search.py  settling.py
results/: equilibrium_divergence_h128_e2.json  equilibrium_divergence_h128_e3.json  local_decay_fix_h6.json  local_decay_fix_verify.json  m4_alternating_song_exact_budgetsweep_s10.json  m4_alternating_song_exact_budgetsweep_s5.json  m4_alternating_song_exact_i24_s1.json  m4_alternating_song_r12_s3.json  m4_alternating_stability_probe.json  m4_classil_fashion_t2k5_s1.json  m4_classil_fashion_t2k5_s3.json  m4_classil_mnist_t5k2_s3.json  m4_compare3_T10_e1_s1.json  m4_compare3_T40_e8_s3.json  m4_compare_T40_e8_s3.json  m4_continual3_t2_e1_s1.json  m4_continual3_t5_e3_s3.json  m4_continual_t5_e3_s3.json  m4_settling_e8_s3.json  m4_smalldata_e15_s3.json  m5_demo_summary.json  m5v2_demo_summary.json  m6_kernel_benchmark.json  m6_launch_count.json  m7_search.json  signal_decay_w64_T20.json
scripts/: bench_alternating_backend.py  bench_kernel.py  demo_generative.py  demo_generative_v2.py  equilibrium_divergence.py  local_decay_fix.py  make_figures.py  profile_launches.py  run_experiments.py  run_search.py  signal_decay.py  train_mnist.py  verify_kernel.py
tests/: test_api.py  test_baselines.py  test_continual.py  test_generate.py  test_generative.py  test_protocol.py  test_search.py  test_settling.py
thesis/: README.md  (+2 more)
(+19 files in other folders)
